remove the width inherit from .card-title to stop it from overflowing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,7 +279,7 @@ h6 {
 }
 
 .card-title {
-    width: inherit;
+    /* width: inherit; */
     margin-bottom: 1rem;
     padding: 1rem;
     text-align: center;
